# yiyue

./: .gitignore  LICENSE  README.md  TEST_CHECKLIST.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: annotations.rs  books.rs  dict.rs  export.rs  import.rs  mod.rs  rules.rs  search.rs  stats.rs  sync.rs  tags.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/parser/: comic.rs  docx.rs  epub.rs  markdown.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/rules/: mod.rs  presets.rs
src-tauri/src/search/: mod.rs
src-tauri/src/sync/: mod.rs
src/components/: BookCard.tsx  HighlightPopover.tsx  NotePanel.tsx  SearchPanel.tsx  Toast.tsx
src/hooks/: useFullscreen.ts
src/pages/: ComicReader.tsx  Library.tsx  Reader.tsx  Rules.tsx  Stats.tsx  SyncSettings.tsx
src/stores/: app.ts
src/stores/__tests__/: app.test.ts
src/types/: index.ts
src/types/__tests__/: index.test.ts
