[package]
name = "yiyue"
version = "0.1.0"
description = "一页 — 本地优先的桌面阅读器"
authors = ["you"]
edition = "2021"

[lib]
name = "yiyue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
thiserror = "2"
encoding_rs = "0.8"
chardetng = "0.1"
regex = "1"
epub = "2"
jieba-rs = "0.10"
pdf = "0.10"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "2"

